--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -35,7 +35,7 @@
 		//embedded_svc.settings.fallbackRouting = []; //Uma matriz de IDs de botão, IDs de usuário ou userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Padronizado para Entre em contato conosco)
 		embedded_svc.settings.extraPrechatFormDetails = [{ "label": "Id",
-															"value": "0035w000034hcP9AAI",
+															"value": "0035C00000LG4QeQAL",
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC7PQAW",
