--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -60,7 +60,7 @@
 													"entityFieldMaps": [{
 														"isExactMatch": false,
 														"fieldName": "RecordTypeId",
-														"doCreate": false,
+														"doCreate": true,
 														"doFind": false,
 														"label": "RecordTypeId"
 														}]
