--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -34,15 +34,15 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Define o preenchimento automático de campos de formulário de pré-chat
 		//embedded_svc.settings.fallbackRouting = []; //Uma matriz de IDs de botão, IDs de usuário ou userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Padronizado para Entre em contato conosco)
-		embedded_svc.settings.extraPrechatFormDetails = [{ "label": "Id",
+		embedded_svc.settings.extraPrechatFormDetails = [{ "label": "FirstName",
+															"value": "Germano",
+															"displayToAgent": true
+														},{ "label": "Id",
 															"value": "0035C00000LG4QeQAL",
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC7PQAW",
 															"displayToAgent": false
-														},{ "label": "FirstName",
-															"value": "Germano",
-															"displayToAgent": true
 														}]; 
 				   
 		embedded_svc.settings.extraPrechatInfo = [{ "showOnCreate": true,
@@ -62,6 +62,18 @@
 														"fieldName":"FirstName",
 														"isExactMatch":false,
 														"label":"First Name"
+														}]
+												},{ "showOnCreate": true,
+													"entityName": "ProtocoloAtendimento__c",
+													"saveToTranscript": "ProtocoloAtendimento__c",
+													"linkToEntityName": "Case",
+													"linkToEntityField": "ProtocoloAtendimento__c",
+													"entityFieldMaps": [{
+														"doCreate": true,
+														"doFind": false,
+														"fieldName": "Contato__c",
+														"isExactMatch": true,
+														"label": "Id"
 														}]
 												},{ "entityName": "Case",
 													"showOnCreate": true,
