--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -35,10 +35,10 @@
 		//embedded_svc.settings.fallbackRouting = []; //Uma matriz de IDs de botão, IDs de usuário ou userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Padronizado para Entre em contato conosco)
 		embedded_svc.settings.extraPrechatFormDetails = [{ "label": "FirstName",
-															"value": "GermanoF",
-															"displayToAgent": true
-														},{ "label": "LastName",
 															"value": "Germano",
+															"displayToAgent": true
+														},{ "label": "Origin",
+															"value": "Chat",
 															"displayToAgent": true
 														},{ "label": "Id",
 															"value": "0035C00000LG4QeQAL",
@@ -72,18 +72,6 @@
 															"isExactMatch":false,
 															"label":"LastName"
 														}]
-												},{ "showOnCreate": true,
-													"entityName": "ProtocoloAtendimento__c",
-													"saveToTranscript": "ProtocoloAtendimento__c",
-													"linkToEntityName": "Case",
-													"linkToEntityField": "ProtocoloAtendimento__c",
-													"entityFieldMaps": [{
-														"doCreate": true,
-														"doFind": false,
-														"fieldName": "Contato__c",
-														"isExactMatch": true,
-														"label": "Id"
-														}]
 												},{ "entityName": "Case",
 													"showOnCreate": true,
 													"saveToTranscript": "CaseId",
@@ -93,6 +81,12 @@
 														"doCreate": true,
 														"doFind": false,
 														"label": "RecordTypeId"
+														},{
+														"isExactMatch": true,
+														"fieldName": "Origin",
+														"doCreate": false,
+														"doFind": false,
+														"label": "Origin"
 														}]
 												  }];
 
