Add Chat Origin

--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -76,16 +76,16 @@
 													"showOnCreate": true,
 													"saveToTranscript": "CaseId",
 													"entityFieldMaps": [{
-														"isExactMatch": true,
+														"isExactMatch": false, //true
 														"fieldName": "RecordTypeId",
-														"doCreate": true,
-														"doFind": false,
+														"doCreate": true, //true
+														"doFind": false, //false
 														"label": "RecordTypeId"
 														},{
-														"isExactMatch": true,
+														"isExactMatch": false, //true
 														"fieldName": "Origin",
-														"doCreate": false,
-														"doFind": false,
+														"doCreate": true, //false
+														"doFind": false, //false
 														"label": "Origin"
 														}]
 												  }];
