--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -41,10 +41,10 @@
 															"value": "Chat",
 															"displayToAgent": true
 														},{ "label": "Id",
-															"value": "0015C00000U55pqQAB",
+															"value": "0015C00000U55pq",
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
-															"value": "0125C000000KC7tQAG",
+															"value": "0125C000000KC7t",
 															"displayToAgent": false
 														}]; 
 				   
