Display to Agent

--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -42,10 +42,10 @@
 															"displayToAgent": true
 														},{ "label": "Id",
 															"value": "0015C00000U55pq",
-															"displayToAgent": false
+															"displayToAgent": true
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC7t",
-															"displayToAgent": false
+															"displayToAgent": true
 														}]; 
 				   
 		embedded_svc.settings.extraPrechatInfo = [{ "showOnCreate": true,
