--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -44,7 +44,7 @@
 															"value": "0015C00000U55pqQAB",
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
-															"value": "0125C000000KC7PQAW",
+															"value": "0125C000000KC7tQAG",
 															"displayToAgent": false
 														}]; 
 				   
