--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -41,7 +41,7 @@
 															"value": "Chat",
 															"displayToAgent": true
 														},{ "label": "Id",
-															"value": "0015C00000U6cjVQAR",  //VDG = 0015C00000U55pqQAB - SGI = 0015C00000U6cjVQAR
+															"value": "0015C00000U55pqQAB",  //VDG = 0015C00000U55pqQAB - SGI = 0015C00000U6cjVQAR
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC7tQAG",
