--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -34,6 +34,7 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Define o preenchimento automático de campos de formulário de pré-chat
 		//embedded_svc.settings.fallbackRouting = []; //Uma matriz de IDs de botão, IDs de usuário ou userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Padronizado para Entre em contato conosco)
+		//VDG = 0015C00000U55pqQAB - SGI = 0015C00000U6cjVQAR
 		embedded_svc.settings.extraPrechatFormDetails = [{ "label": "FirstName",
 															"value": "Germano",
 															"displayToAgent": true
@@ -41,7 +42,7 @@
 															"value": "Chat",
 															"displayToAgent": true
 														},{ "label": "Id",
-															"value": "0015C00000U55pqQAB",  //VDG = 0015C00000U55pqQAB - SGI = 0015C00000U6cjVQAR
+															"value": "0015C00000U55pqQAB",  
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC7tQAG",
