--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -42,7 +42,7 @@
 															"value": "Chat",
 															"displayToAgent": true
 														},{ "label": "Id",
-															"value": "0015C00000U55pqQAB",  
+															"value": "0015C00000U6cjVQAR",  
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC7tQAG",
