--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -20,7 +20,7 @@
 		embedded_svc.settings.displayHelpButton = true; //Ou falso
 		embedded_svc.settings.language = 'pt-BR'; //Por exemplo, insira "pt" ou "pt-BR"
 
-		//embedded_svc.settings.defaultMinimizedText = '...'; //(Assume como padrão o Chat com um especialista)
+		embedded_svc.settings.defaultMinimizedText = 'Iniciar bate-papo'; //(Assume como padrão o Chat com um especialista)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Assume como padrão Agente off-line)
 
 		//embedded_svc.settings.loadingText = ''; //(Assume como padrão Carregando)
