Alterar texto Loading para Carregando

--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -23,7 +23,7 @@
 		embedded_svc.settings.defaultMinimizedText = 'Iniciar bate-papo'; //(Assume como padrão o Chat com um especialista)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Assume como padrão Agente off-line)
 
-		//embedded_svc.settings.loadingText = ''; //(Assume como padrão Carregando)
+		embedded_svc.settings.loadingText = 'Carregando'; //(Assume como padrão Carregando)
 		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Define o domínio de sua implantação para que seus visitantes possam navegar em subdomínios durante uma sessão de chat)
 
 		// Configurações para Chat
