--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -31,7 +31,7 @@
 			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
 			// Returns a valid button ID.
 		//};
-		embedded_svc.settings.prepopulatedPrechatFields = {FirstName: "Leonardo"}; //Define o preenchimento automático de campos de formulário de pré-chat
+		embedded_svc.settings.prepopulatedPrechatFields = {FirstName: 'Leonardo'}; //Define o preenchimento automático de campos de formulário de pré-chat
 		//embedded_svc.settings.fallbackRouting = []; //Uma matriz de IDs de botão, IDs de usuário ou userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Padronizado para Entre em contato conosco)
 		//VDG = 0015C00000U55pqQAB - SGI = 0015C00000U6cjVQAR
