Change Account -> SGI

--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -41,7 +41,7 @@
 															"value": "Chat",
 															"displayToAgent": false
 														},{ "label": "Id",
-															"value": "0015C00000U5EVpQAN",  
+															"value": "0015C00000UafCgQAJ",  
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0125C000000KC8NQAW",
