--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -42,10 +42,10 @@
 															"value": "Chat",
 															"displayToAgent": false
 														},{ "label": "Id",
-															"value": "0015C00000U6cjVQAR",  
+															"value": "001F000001nbNu9IAE",  
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
-															"value": "0125C000000KC7tQAG",
+															"value": "0121Y000001J66KQAS",
 															"displayToAgent": false
 														}]; 
 				   
@@ -91,19 +91,19 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
-
+        //https://supergasbras--mergeqa.lightning.force.com/												  
 		embedded_svc.init(
-			'https://supergasbras--SER.my.salesforce.com',
-			'https://ser-supergasbras-community-dev.cs62.force.com/AssistenciaTecnica',
+			'https://supergasbras--mergeqa.my.salesforce.com',
+			'https://mergeqa-supergasbras-community.cs165.force.com/AssistenciaTecnica',
 			gslbBaseURL,
-			'00D5C00000011gr',
+			'00D6s0000008aZt',
 			'CanaisDigitais',
 			{
-				baseLiveAgentContentURL: 'https://c.la2-c1cs-ia4.salesforceliveagent.com/content',
-				deploymentId: '5725C0000004CDK',
-				buttonId: '5735C0000004CG9',
-				baseLiveAgentURL: 'https://d.la2-c1cs-ia4.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Canais_Digitais',
+				baseLiveAgentContentURL: 'https://c.la2-c1cs-ia5.salesforceliveagent.com/content',
+				deploymentId: '5726s0000004CG9',
+				buttonId: '5736s0000004CI0',
+				baseLiveAgentURL: 'https://d.la2-c1cs-ia5.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I6s000000GmknEAC_17556aed791',
 				isOfflineSupportEnabled: false
 			}
 		);
