--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -13,7 +13,7 @@
 		url('https://c1.sfdcstatic.com/etc/clientlibs/sfdc-aem-master/clientlibs_base/fonts/SalesforceSans-Regular.ttf') format('truetype');
 	}
 </style>
-
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
@@ -42,7 +42,7 @@
 															"value": "Chat",
 															"displayToAgent": false
 														},{ "label": "Id",
-															"value": "001F000001nbNu9IAE",  
+															"value": "001F000001rFPCsIAO",  
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
 															"value": "0121Y000001J66KQAS",
