--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -42,10 +42,10 @@
 															"value": "Chat",
 															"displayToAgent": false
 														},{ "label": "Id",
-															"value": "0015C00000U6cjVQAR",  
+															"value": "001F000001rFPCsIAO",  
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
-															"value": "0125C000000KC7tQAG",
+															"value": "0121Y000001J66KQAS",
 															"displayToAgent": false
 														}]; 
 				   
@@ -93,17 +93,17 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://supergasbras--SER.my.salesforce.com',
-			'https://ser-supergasbras-community-dev.cs62.force.com/AssistenciaTecnica',
+			'https://supergasbras--uatfull.my.salesforce.com',
+			'https://uatfull-supergasbras-community.cs124.force.com/AssistenciaTecnica',
 			gslbBaseURL,
-			'00D5C00000011gr',
+			'00D3J0000000QWR',
 			'CanaisDigitais',
 			{
-				baseLiveAgentContentURL: 'https://c.la2-c1cs-ia4.salesforceliveagent.com/content',
-				deploymentId: '5725C0000004CDK',
-				buttonId: '5735C0000004CG9',
-				baseLiveAgentURL: 'https://d.la2-c1cs-ia4.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Canais_Digitais',
+				baseLiveAgentContentURL: 'https://c.la1-c1cs-ia4.salesforceliveagent.com/content',
+				deploymentId: '5723J0000004CJh',
+				buttonId: '5733J0000004CLx',
+				baseLiveAgentURL: 'https://d.la1-c1cs-ia4.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3J0000008OVsUAM_17556acf6b8',
 				isOfflineSupportEnabled: false
 			}
 		);
@@ -111,7 +111,7 @@
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://supergasbras--SER.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://supergasbras--uatfull.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
