--- a/sample/superChat.html
+++ b/sample/superChat.html
@@ -1,5 +1,4 @@
-
-   <style type='text/css'>
+<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #EB640A;
 		font-family: "Salesforce Sans", sans-serif;
@@ -17,35 +16,34 @@
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
-		embedded_svc.settings.displayHelpButton = true; //Ou falso
-		embedded_svc.settings.language = 'pt-BR'; //Por exemplo, insira "pt" ou "pt-BR"
+		embedded_svc.settings.displayHelpButton = true; //Or false
+		embedded_svc.settings.language = 'pt-BR'; //For example, enter 'en' or 'en-US'
 
-		embedded_svc.settings.defaultMinimizedText = 'Iniciar bate-papo'; //(Assume como padrão o Chat com um especialista)
-		//embedded_svc.settings.disabledMinimizedText = '...'; //(Assume como padrão Agente off-line)
+		embedded_svc.settings.defaultMinimizedText = 'Iniciar bate-papo'; //(Defaults to Chat with an Expert)
+		embedded_svc.settings.disabledMinimizedText = 'Agente off-line'; //(Defaults to Agent Offline)
 
-		embedded_svc.settings.loadingText = 'Carregando'; //(Assume como padrão Carregando)
-		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Define o domínio de sua implantação para que seus visitantes possam navegar em subdomínios durante uma sessão de chat)
+		embedded_svc.settings.loadingText = 'Carregando'; //(Defaults to Loading)
+		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
 
-		// Configurações para Chat
+		// Settings for Chat
 		//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
 			// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
 			// Returns a valid button ID.
 		//};
-		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Define o preenchimento automático de campos de formulário de pré-chat
-		//embedded_svc.settings.fallbackRouting = []; //Uma matriz de IDs de botão, IDs de usuário ou userId_buttonId
-		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Padronizado para Entre em contato conosco)
-		//VDG = 0015C00000U55pqQAB - SGI = 0015C00000U6cjVQAR
+		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
 		embedded_svc.settings.extraPrechatFormDetails = [{ "label": "FirstName",
-															"value": "Leonardo",
+															"value": "COND EDIF SAO LUCAS", //Nome da Conta ou Usuário
 															"displayToAgent": false
 														},{ "label": "Origin",
 															"value": "Chat",
 															"displayToAgent": false
 														},{ "label": "Id",
-															"value": "001F000001rFPCsIAO",  
+															"value": "001A000000d7ESWIA2",  //Id da Conta
 															"displayToAgent": false
 														},{ "label": "RecordTypeId",
-															"value": "0121Y000001J66KQAS",
+															"value": "0121Y000001J66KQAS", //Id do Tipo de Registro "Atendimento" do objeto Caso
 															"displayToAgent": false
 														}]; 
 				   
@@ -75,16 +73,16 @@
 													"showOnCreate": true,
 													"saveToTranscript": "CaseId",
 													"entityFieldMaps": [{
-														"isExactMatch": false, //true
+														"isExactMatch": false,
 														"fieldName": "RecordTypeId",
-														"doCreate": true, //true
-														"doFind": false, //false
+														"doCreate": true,
+														"doFind": false,
 														"label": "RecordTypeId"
 														},{
-														"isExactMatch": false, //true
+														"isExactMatch": false,
 														"fieldName": "Origin",
-														"doCreate": true, //false
-														"doFind": false, //false
+														"doCreate": true,
+														"doFind": false,
 														"label": "Origin"
 														}]
 												  }];
@@ -93,17 +91,17 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://supergasbras--uatfull.my.salesforce.com',
-			'https://uatfull-supergasbras-community.cs124.force.com/AssistenciaTecnica',
+			'https://supergasbras--uat.my.salesforce.com',
+			'https://uat-supergasbras-community.cs68.force.com/AssistenciaTecnica',
 			gslbBaseURL,
-			'00D3J0000000QWR',
+			'00D1D0000007DxT',
 			'CanaisDigitais',
 			{
-				baseLiveAgentContentURL: 'https://c.la1-c1cs-ia4.salesforceliveagent.com/content',
-				deploymentId: '5723J0000004CJh',
-				buttonId: '5733J0000004CLx',
-				baseLiveAgentURL: 'https://d.la1-c1cs-ia4.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I3J0000008OVsUAM_17556acf6b8',
+				baseLiveAgentContentURL: 'https://c.la4-c1cs-phx.salesforceliveagent.com/content',
+				deploymentId: '5721Y000000NXVA',
+				buttonId: '5731Y000000NaVm',
+				baseLiveAgentURL: 'https://d.la4-c1cs-phx.salesforceliveagent.com/chat',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I1Y000000blMNUAY_177fea7eae6',
 				isOfflineSupportEnabled: false
 			}
 		);
@@ -111,7 +109,7 @@
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://supergasbras--uatfull.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://supergasbras--uat.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
